# -dc-edge-sdk-c-sample

./: .clang-format  .gitignore  CMakeLists.txt  DatahubEdge.so.1.0.5  EdgeHubEdge.h  EdgeHubEdge.so.1.0.5  README.md  makefile  sample.c
inc/: CONST.h  EDGE_AGENT_OPTION.h  EDGE_CONFIG.h  EDGE_DATA.h  EDGE_DEVICE_STATUS.h  EDGE_EVENT.h  EDGE_INC.h  cJSON.h  message.h  messageClient.h  mosquitto.h  sqlite3.h  sqlite3ext.h  string.h
inc/curl/: curl.h  curlbuild.h  curlrules.h  curlver.h  easy.h  mprintf.h  multi.h  stdcheaders.h  typecheck-gcc.h
